Fix board size on mobile displays.

--- a/css/theme.css
+++ b/css/theme.css
@@ -49,7 +49,8 @@ body {
 }
 
 .game-board {
-	width: 100%;
+	width: 320px;
+	height: 320px;
 	background-color: #eeeeee;
 	overflow: hidden;
 	position: relative;
